# vilistextum

./: .editorconfig  .gitignore  .hgignore  .travis.yml  INSTALL  Makefile.am  Release_checklist  autogen.sh  configure.ac  configure.in  create-dist  freshmeat  vilistextum.spec
debian/: changelog  control  copyright  install  manpages  rules  watch
doc/: Makefile.am  README.multibyte.xhtml  README.xhtml  changes.xhtml  create-dok  dokumentation  download.xhtml  downloads.xml  htmlmail.xhtml  screenshots.xhtml  style.css  tidy.conf  vilistextum-manual.xml  vilistextum-werbung  vilistextum.1
src/: Makefile.am  Makefile.amiga  Makefile.dos  Makefile.in  charset.c  charset.h  debug.h  fallback_entities.h  fileio.c  fileio.h  html.c  html.h  html_tag.c  html_tags.c  html_tags.h  kilistextum.kaptn  latin1.c  latin1.h  lists.c  lists.h  main.c  main.h  make-help.rb  microsoft.c  microsoft.h  multibyte.h  text.c  text.h  unicode_entities.c  unicode_entities.h  util.c  util.h
tests/: Makefile.am  Makefile.in  README  check_bufferoverflow  check_command_line_options  check_entities  check_fallback_entities  check_hr  check_html32  check_html5  check_latex  check_latin2  check_ligatures  check_links_inline  check_lists  check_script  check_tags  check_utf8  check_utf8_to_ascii  check_utf8_to_latin1  check_windows-1252  check_xml_default_encoding  entities.html  entities.output.test  fallback_entities.html  fallback_entities.output  firebird-0.7-dump-entities  html5.html  html5.output  links-0.95-dump-entities  lynx-2.8.4rel.1-dump-entities  test_functions  utf-8-sampler.html  utf-8-sampler.output  utf-8-sampler.output.test  utf-8-to-latin1.html  utf-8-to-latin1.output
tests/testcases/: bufferoverflow.html  bufferoverflow.output  command_line_options.html  command_line_options.output  entities.ascii.output  entities.html  fallback_entities.html  hr.html  hr.output  html32.html  html32.output  html5.html  html5.output  latex.html  latex.output  latin2.html  latin2.output  latin2_to_latin1.output  ligatures.html  ligatures.output  links_inline.html  links_inline.output  lists1.html  lists1.output  lists2.html  lists2.output  lists3.html  lists3.output.test  lists4.html  lists4.output.test  script.html  script.output  tags.html  tags.output  utf-8-sampler.output  utf-8-to-ascii.output  utf-8-to-latin1.output  windows-1252-unconverted.output  windows-1252.html  windows-1252.output  (+6 more)
vilistextumgui/: Buttons.java  Debug.java  ExecuteCommand.java  Files.java  Makefile  Makefile.am  Makefile.in  Option1.java  Option1.java2  Option2.java  Option2.java2  Panel0.java  Panel16.java  VG.bat  VilistextumGUI.bat  VilistextumGUI.java  index.html  mainclass  ppp.htm  ppp.txt  test  test.bat  vg.pif  vilistextum
